--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "pydantic (>=2.12.5,<3.0.0)",
     "pydantic-settings (>=2.12.0,<3.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
-    "asyncpg (>=0.31.0,<0.32.0)"
+    "asyncpg (>=0.31.0,<0.32.0)",
+    "dotenv (>=0.9.9,<0.10.0)"
 ]
 
 
